Aktualizace pravidel na sezonu 2024 (closes #4)

--- a/app/modules/Web/presenters/Pravidla/templates/pravidla.latte
+++ b/app/modules/Web/presenters/Pravidla/templates/pravidla.latte
@@ -77,7 +77,7 @@
                         <i class="fa fa-gavel"></i>Pokud se utkání neodehraje v řádném, nebo náhradním termínu
                         stanoveném v rozlosování je nutné oznámit další termín vedení soutěže, jinak následuje kontumace
                         v neprospěch týmu, který se nedostavil k utkání. Veškerá utkání musí být odehrána do 28.9.,
-                        jinak následuje kontumace.
+                        jinak následuje kontumace
                     </div>
 
                     <div>
